--- a/styles.css
+++ b/styles.css
@@ -44,17 +44,26 @@ body {
     border-radius: 10px 10px 10px 10px;
 }
 
+.hero-image-container {
+    position: relative;
+}
+
 .hero-image {
     height: 20rem;
+    display: block;
     background-image: url('/images/image-header-mobile.jpg');
     background-position: center top;
     background-size: contain;
     background-repeat: no-repeat;
 }
 
-/*            TODO        Create overlay color*/
-
 .overlay {
+    width: 100%;
+    height: 91.9%;
+    background: var(---primary--soft-violet);
+    opacity: 0.6;
+    position: absolute;
+    bottom: 8%;
 }
 
 .attribution {
