Style paragraph text

--- a/styles.css
+++ b/styles.css
@@ -73,10 +73,19 @@ body {
 
 .text-container h1 {
     color: var(---neutral--main-paragraph);
+    padding-left: 2rem;
+    padding-right: 2rem;
 }
 
 .text-container span {
     color: var(---primary--soft-violet);
+}
+
+.text-container p {
+    font-size: 1.2rem;
+    color: var(---neutral--stats-heading);
+    padding-left: 2rem;
+    padding-right: 2rem;
 }
 
 .attribution {
