--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,7 @@ body {
 
 .text-container {
     text-align: center;
+    margin-bottom: 4rem;
 }
 
 .text-container h1 {
@@ -91,6 +92,15 @@ body {
 
 .stats-heading {
     color: var(---neutral--main-paragraph);
+    margin: 0;
+}
+
+.stats-wording {
+    font-size: 1rem;
+    color: var(---neutral--stats-heading);
+    text-transform: uppercase;
+    padding-top: 0.5rem;
+    margin-bottom: 2rem;
 }
 
 .attribution {
