--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ body {
     background-position: center top;
     background-size: contain;
     background-repeat: no-repeat;
-    border-radius: 10px 10px;
+    border-radius: 10px 10px 0 0;
 }
 
 .overlay {
@@ -64,7 +64,7 @@ body {
     opacity: 0.6;
     position: absolute;
     bottom: 8%;
-    border-radius: 10px 10px;
+    border-radius: 10px 10px 0 0;
 }
 
 .text-container {
