Finish mobile design

--- a/styles.css
+++ b/styles.css
@@ -110,3 +110,14 @@ body {
 .attribution a {
     color: hsl(228, 45%, 44%);
 }
+
+@media screen and (min-width: 768px) {
+    .card-container {
+        display: flex;
+        max-width: 300rem;
+    }
+
+    .stats-container {
+        display: flex;
+    }
+}
