Layout for larger desktops complete, must now fix sizing for container, overlay and image

--- a/styles.css
+++ b/styles.css
@@ -114,6 +114,19 @@ body {
 @media screen and (min-width: 768px) {
     .card-container {
         display: flex;
+        flex-direction: row-reverse;
+    }
+
+    .hero-image-container {
+        width: 50rem;
+    }
+
+    .hero-image {
+        width: 50rem;
+    }
+
+    .overlay {
+        width: 40rem;
     }
 
     .text-container {
